# houdini-tools

./: .gitignore  .mcp.json  README.md  gemini-extension.json  mcp_config.json  plugin.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
mcp-server-houdini-lite/: README.md  bgeo_clips.py  bgeo_handlers.py  bgeo_reader.py  blosc_io.py  pyproject.toml  server.py  usd_clips.py  usd_handlers.py  usd_tools.py  vdb_clips.py  vdb_handlers.py  vdb_tools.py
skills/houdini-cli/: SKILL.md
skills/houdini-cli/references/: husk.md  tools.md  usdrecord.md
skills/houdini-env/: SKILL.md
skills/houdini-env/references/: env-vars.md  packages.md
skills/houdini-lite/: SKILL.md
skills/houdini-locator/: SKILL.md
skills/houdini-locator/scripts/: find-houdini.ps1  find-houdini.sh
